# ptcgp-db

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  DESIGN.md  LICENSE  README.md  ROADMAP.md
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
docs/: google-drive-oauth.md
ptcgp-db/: Cargo.toml  Dioxus.toml  build.rs  tailwind.css
ptcgp-db-core/: Cargo.toml  build.rs
ptcgp-db-core/src/: file_storage.rs  filter.rs  lib.rs  migration.rs  probability.rs  profile_store.rs  queries.rs  save_data.rs  settings.rs  storage.rs  summary_data.rs  trade_data.rs  web_storage.rs
ptcgp-db-core/src/profile_store/: mod.rs  tests.rs
ptcgp-db-data/: Cargo.toml
ptcgp-db-data/codegen/: generate.rs  load.rs  main.rs  marshal.rs  models.rs
ptcgp-db-data/src/: ability.rs  attack.rs  base_pokemon.rs  card.rs  card_source.rs  card_version.rs  element.rs  id_slice.rs  lib.rs  pack.rs  pack_slot.rs  pack_variant.rs  prob.rs  rarity.rs  rarity_class.rs  rarity_group.rs  series.rs  set.rs  stage.rs  str_table.rs  tests.rs  trainer_kind.rs
ptcgp-db/src/: app.rs  main.rs  routes.rs
ptcgp-db/src/components/: count_spinner.rs  effect_text.rs  icons.rs  mod.rs  nav.rs  profile_selector.rs  toggle.rs
ptcgp-db/src/components/filter_toolbar/: controls.rs  dropdowns.rs  mod.rs  pickers.rs
ptcgp-db/src/drive/: client.rs  gis.rs  mod.rs  pkce.rs  token_exchange.rs
ptcgp-db/src/pages/: analysis.rs  card_details.rs  catalog.rs  import_export.rs  mod.rs  onboarding.rs  profiles.rs  settings.rs  summary.rs  trade.rs
ptcgp-db/src/pages/trade/: history.rs  mod.rs  rows.rs
