[package]
name = "ptcgp-db-core"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
ptcgp-db-data = { path = "../ptcgp-db-data" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
rexie = "0.6.2"
wasm-bindgen = "0.2.122"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.72"
