[package]
name = "ptcgp-db-core"
version = "0.2.0"
edition = "2024"
license.workspace = true

[lints]
workspace = true

[dependencies]
ptcgp-db-data = { path = "../ptcgp-db-data" }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2"

[build-dependencies]
ptcgp-db-data = { path = "../ptcgp-db-data" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
rexie = "0.6.2"
wasm-bindgen = "0.2.122"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.72"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dirs = "6"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
tempfile = "3"
