[package]
name = "ptcgp-db"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
dioxus = { version = "0.7", features = ["router"] }
ptcgp-db-core = { path = "../ptcgp-db-core" }
ptcgp-db-data = { path = "../ptcgp-db-data" }
futures-channel = "0.3"
futures-util = "0.3"
tracing = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.3", features = ["futures"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["time"] }

[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
