[package]
name = "ptcgp-db"
version = "0.1.1"
edition = "2024"
license.workspace = true

[lints]
workspace = true

[dependencies]
dioxus = { version = "0.7", features = ["router"] }
ptcgp-db-core = { path = "../ptcgp-db-core" }
ptcgp-db-data = { path = "../ptcgp-db-data", features = ["images"] }
chrono = { version = "0.4", features = ["wasmbind"] }
futures-channel = "0.3"
futures-util = "0.3"
serde_json = "1"
tracing = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.3", features = ["futures"] }
js-sys = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Storage", "VisibilityState", "Window"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = "0.17"
tokio = { version = "1", features = ["time"] }

[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
