[package]
name = "ptcgp-db"
version = "0.1.2"
edition = "2024"
license.workspace = true

[lints]
workspace = true

[dependencies]
dioxus = { version = "0.7", features = ["router"] }
ptcgp-db-core = { path = "../ptcgp-db-core" }
ptcgp-db-data = { path = "../ptcgp-db-data", features = ["images"] }
chrono = { version = "0.4", features = ["wasmbind"] }
futures-channel = "0.3"
futures-util = "0.3"
serde_json = "1"
tracing = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
base64 = "0.22"
getrandom = { version = "0.2", features = ["js"] }
gloo-timers = { version = "0.4", features = ["futures"] }
js-sys = "0.3"
reqwest = { version = "0.13", default-features = false, features = ["form", "json", "query"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
thiserror = "2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "History", "Location", "Storage", "UrlSearchParams", "VisibilityState", "Window"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = "0.17"
tokio = { version = "1", features = ["time"] }

[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
